<resources>
    <string name="app_name">Paragliding Companion</string>
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>
    <string name="action_show_another_fragment">Show another fragment</string>
    <string name="msg_what_up_this_is_another_fragment">What up! This is another fragment!</string>
    <string name="general_error_label">Error</string>

    <string name="general_share_action">Share</string>
    <string name="general_done_action">Done</string>
    <string name="general_copy_action">Copy</string>
    <string name="general_continue_action">Continue</string>
    <string name="general_cancel_action">Cancel</string>
    <string name="general_progress_loading">Loading</string>
    <string name="general_view_action">View</string>

    <string name="debug_debuglog_size_label">Size</string>
    <string name="debug_debuglog_size_compressed_label">Compressed size</string>
    <string name="debug_notification_channel_label">Debug notifications</string>
    <string name="debug_debuglog_file_label">Recorded log file</string>
    <string name="debug_debuglog_recording_progress">Recording debug log</string>
    <string name="debug_debuglog_record_action">Record debug log</string>
    <string name="debug_debuglog_stop_action">Stop recording</string>
    <string name="debug_debuglog_sensitive_information_message">The generated file contains sensitive information. Only share it with trusted parties.</string>
    <string name="settings_debuglog_explanation">This feature records everything the app is doing into a shareable file. The generated file may contain sensitive information. Only share it with trusted parties (e.g. a developer that is troubleshooting an issue).</string>

    <string name="settings_privacy_policy_label">Privacy policy</string>
    <string name="settings_privacy_policy_desc">Handling data responsibly.</string>
    <string name="settings_licenses_label">Licenses</string>
    <string name="general_thank_you_label">Thank you</string>
    <string name="settings_category_other_label">Other</string>

    <string name="general_settings_label">General</string>
    <string name="general_settings_desc">General tweaks that affect the whole app.</string>
    <string name="general_dismiss_action">Dismiss</string>

    <string name="settings_category_ui_label">User interface</string>

    <string name="ui_theme_mode_setting_label">Theme mode</string>
    <string name="ui_theme_mode_setting_explanation">The mode used when theming the app (e.g. night or day).</string>
    <string name="ui_theme_mode_dark_label">Dark</string>
    <string name="ui_theme_mode_light_label">Light</string>
    <string name="ui_theme_mode_system_label">System</string>

    <string name="ui_theme_style_setting_label">Theme style</string>
    <string name="ui_theme_style_setting_explanation">The color style used when theming the app.</string>
    <string name="ui_theme_style_default_label">Default</string>
    <string name="ui_theme_style_materialyou_label">Material You</string>

    <string name="settings_support_label">Support</string>
    <string name="documentation_label">Documentation</string>
    <string name="discord_label">Discord</string>
    <string name="discord_description">A place to hang out in and ask questions.</string>
    <string name="issue_tracker_label">Issue tracker</string>
    <string name="issue_tracker_description">A public issue tracker for bug reports and feature requests.</string>
    <string name="support_installid_label">Install ID</string>
    <string name="support_installid_desc">Automatic error reports are anonymous. Share your install ID if the developer needs to find your error reports.</string>
    <string name="support_debuglog_label">Debug log</string>
    <string name="support_debuglog_desc">Record everything the app is doing into a text file that you can share.</string>

    <string name="changelog_label">Changelog</string>
    <string name="settings_acknowledgements_label">Acknowledgements</string>
    <string name="setup_incomplete_card_continue_action">Continue</string>
    <string name="xctrack_setup_title">Setup XCTrack</string>
    <string name="xctrack_setup_body">Set up access to XCTrack flight data.</string>

    <string name="importer_dashboard_card_title">No flight data yet</string>
    <string name="importer_dashboard_card_body">Add some flights, you have not imported any yet!</string>
    <string name="importer_dashboard_card_action">Import</string>

    <string name="importer_title">Import flights</string>
    <string name="importer_manual_import_title">Manual file import</string>
    <string name="importer_manual_import_start_desc1">Import flight data by selecting files on your device, e.g. XCTrack/Tracklogs -> Select All -> Import.</string>
    <string name="importer_manual_import_start_desc2">Duplicate flights are skipped, only new and unique flights are imported.</string>
    <string name="importer_manual_import_select_action">Select files</string>
    <string name="importer_manual_import_result_msg">%d new flights, %d duplicate, %d failed</string>
    <string name="importer_progress_label">Importing flights</string>
    <string name="importer_reparse_title">Reparser</string>
    <string name="importer_reparse_progress">Reparsing flights</string>
    <string name="importer_reparse_changes">%d flights with changed data</string>
    <string name="importer_reparse_data_label">Reparse existing data</string>

    <string name="importer_usb_import_title">Import from attached USB device</string>
    <string name="importer_usb_import_start_desc1">Import all flight data from an attached USB device.</string>
    <string name="importer_usb_import_start_desc2">Duplicate flights are skipped, only new and unique flights are imported.</string>
    <string name="importer_usb_import_start_action">Start import</string>
    <string name="importer_usb_import_result_msg">%d new flights, %d duplicate, %d failed</string>

    <string name="flights_dash_global_title">Overview</string>
    <string name="flights_dash_global_count_msg">Total flights: %d</string>
    <string name="flights_dash_global_hours_msg">Flight hours: %.2f</string>
    <string name="flights_dash_global_locations_msg">Known locations: %d</string>
    <string name="flights_dash_global_longest_msg">Longest flight: %.2f hours</string>
    <string name="flights_dash_global_furthest_msg">Most distance traveled: %s</string>
    <string name="flights_title">Flights</string>
    <string name="flights_list_item_duration">%dm %ds</string>
    <string name="flights_list_item_unknown_location">Unknown location</string>

    <string name="backup_settings_label">Backup</string>
    <string name="backup_settings_desc">Backup your flight data files.</string>
    <string name="backup_local_category">Local backup</string>
    <string name="backup_local_save_label">Backup</string>
    <string name="backup_local_save_desc">Save a ZIP file on your device that contains all flight data.</string>
    <string name="backup_local_restore_label">Restore</string>
    <string name="backup_local_restore_desc">Restore flight data from a backupped ZIP file.</string>
    <string name="backup_tool_label">Backup tool</string>
    <string name="backup_local_select_path_action">Select path</string>
    <string name="backup_local_select_path_desc">Select where you want to store the backup.</string>
    <string name="backup_local_result_success_desc">Backup created: %s</string>
</resources>