<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/reparse_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reparse_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/importer_reparse_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/reparse_progress"
            style="@style/Widget.Material3.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@id/reparse_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/reparse_primary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reparse_progress_label"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/reparse_progress"
            app:layout_constraintEnd_toEndOf="@id/reparse_progress"
            app:layout_constraintStart_toStartOf="@id/reparse_progress"
            app:layout_constraintTop_toTopOf="@id/reparse_progress"
            tools:text="100%" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reparse_primary"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/importer_progress_label"
            app:layout_constraintBottom_toTopOf="@id/reparse_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/reparse_progress"
            app:layout_constraintTop_toBottomOf="@id/reparse_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_goneMarginStart="0dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reparse_secondary"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/importer_manual_import_start_desc2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/reparse_progress"
            app:layout_constraintTop_toBottomOf="@id/reparse_primary"
            app:layout_goneMarginStart="0dp"
            tools:text="some/file/path" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>